--- a/app.html
+++ b/app.html
@@ -6,7 +6,7 @@
 <title>Sinterlootjes — App</title>
 <meta name="color-scheme" content="light">
 <style>
-  * { box-sizing: border-box; margin:0; padding:0; }
+  *{box-sizing:border-box;margin:0;padding:0}
   :root{--bg:#fff7ee;--card:#fff;--text:#1f2937;--muted:#64748b;--brand:#ef4444;--border:#e5e7eb}
   body{margin:0;font-family:ui-rounded,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Emoji",sans-serif;background:var(--bg);color:var(--text)}
   .wrap{max-width:1000px;margin:24px auto;padding:16px}
@@ -44,7 +44,7 @@
 
   <div class="card">
     <h2>Mijn lootje</h2>
-    <p class="muted">De trekking is vast op basis van de deelnemers en trekcode. Pas zichtbaar als <strong>iedereen</strong> minstens 1× inlogde.</p>
+    <p class="muted">Zichtbaar als <strong>iedereen</strong> minstens 1× heeft ingelogd.</p>
     <div class="controls">
       <button class="btn-alt" id="reveal" disabled>Toon mijn lootje</button>
       <span id="myMatch" class="inline-result hidden"></span>
@@ -82,10 +82,10 @@
 
   /* Firebase */
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
-  import { getAuth, signInAnonymously, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js";
+  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js";
   import {
     getFirestore, doc, setDoc, getDoc, collection, addDoc, query, orderBy,
-    getDocs, onSnapshot, serverTimestamp, deleteDoc, updateDoc, arrayUnion
+    getDocs, onSnapshot, serverTimestamp, deleteDoc
   } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js";
 
   const firebaseConfig = {
@@ -104,9 +104,14 @@
 
   /* Helpers */
   const $enc = new TextEncoder();
-  const toast = (m) => alert(m);
   function xmur3(str){ let h=1779033703 ^ str.length; for(let i=0;i<str.length;i++){ h=Math.imul(h ^ str.charCodeAt(i),3432918353); h=(h<<13)|(h>>>19);} return function(){ h=Math.imul(h ^ (h>>>16),2246822507); h=Math.imul(h ^ (h>>>13),3266489909); return (h^=h>>>16)>>>0;};}
-  function sfc32(a,b,c,d){ return function(){ a>>>==0;b>>>==0;c>>>==0;d>>>==0; let t=(a+b)|0; a=b^(b>>>9); b=(c+(c<<3))|0; c=(c<<21)|(c>>>11); c=(c+t)|0; d=(d+1)|0; t=(t+d)|0; return (t>>>0)/4294967296;};}
+  function sfc32(a,b,c,d){
+    return function(){
+      a >>>= 0; b >>>= 0; c >>>= 0; d >>>= 0;
+      let t=(a+b)|0; a=b^(b>>>9); b=(c+(c<<3))|0; c=(c<<21)|(c>>>11); c=(c+t)|0; d=(d+1)|0; t=(t+d)|0;
+      return (t>>>0)/4294967296;
+    };
+  }
   function rng(seed){ const g=xmur3(seed); return sfc32(g(),g(),g(),g()); }
   function shuffle(a, r){ const x=a.slice(); for(let i=x.length-1;i>0;i--){ const j=Math.floor(r()*(i+1)); [x[i],x[j]]=[x[j],x[i]];} return x; }
   function assignDeterministic(names, seed){
@@ -117,6 +122,7 @@
       for(const rv of opts){ used.add(rv); asg.set(g,rv); if(bt(i+1)) return true; used.delete(rv); asg.delete(g); } return false; }
     return bt(0)?asg:null;
   }
+  const toast = m => alert(m);
 
   /* UI refs */
   const loginStatus = document.getElementById('loginStatus');
@@ -132,35 +138,22 @@
   fixedInfoTop.textContent = `Event-ID: ${EVENT_ID} · Trekcode: ${TREKCODE}`;
   fixedInfoBottom.textContent = `Event-ID: ${EVENT_ID} · Trekcode: ${TREKCODE}`;
 
+  // gekozen naam van loginpagina
   let currentName = localStorage.getItem('sinty_currentName') || null;
 
-  // ✅ Zorg dat we altijd een sessie hebben
-  async function ensureAnon(){
-    if (auth.currentUser) return auth.currentUser;
-    const cred = await signInAnonymously(auth);
-    return cred.user;
-  }
+  // Auth guard
+  onAuthStateChanged(auth, (u)=>{
+    if(!u){ window.location.href = 'index.html'; return; }
+    loginStatus.textContent = `Ingelogd — uid ${u.uid.slice(0,6)}…${currentName ? ' — '+currentName : ''}`;
+  });
 
-  // ✅ Zorg dat deze UID schrijfrechten op dit account heeft (voeg toe aan allowed_uids)
-  async function ensureWriteAccess(uid, name){
-    const pRef = doc(db,'events',EVENT_ID,'participants',name);
-    const snap = await getDoc(pRef);
-    if (!snap.exists()) {
-      // geen participant doc? terug naar login
-      localStorage.removeItem('sinty_currentName');
-      window.location.href = 'index.html';
-      return false;
-    }
-    const data = snap.data();
-    const list = Array.isArray(data.allowed_uids) ? data.allowed_uids : [];
-    if (!list.includes(uid)) {
-      // probeer jezelf toe te voegen (rules staan dit toe)
-      await updateDoc(pRef, { allowed_uids: arrayUnion(uid) });
-    }
-    return true;
-  }
+  logoutBtn.addEventListener('click', async ()=>{
+    await signOut(auth);
+    localStorage.removeItem('sinty_currentName');
+    window.location.href = 'index.html';
+  });
 
-  // ✅ “Iedereen 1× ingelogd” check (alleen voor lootje, NIET voor lijstjes)
+  /* iedereen 1× ingelogd */
   async function computeAllLoggedOnce(){
     const qs=await getDocs(collection(db,'events',EVENT_ID,'participants'));
     const map=new Map(); PARTICIPANTS.forEach(n=>map.set(n,false));
@@ -173,45 +166,15 @@
     if(all){ allStatus.classList.add('hidden'); revealBtn.disabled = !currentName; }
     else{ allStatus.textContent = `Wachten op familie: ${done}/${total} heeft 1× ingelogd`; allStatus.classList.remove('hidden'); revealBtn.disabled = true; }
   }
-
   onSnapshot(collection(db,'events',EVENT_ID,'participants'), updateAllBadge);
   updateAllBadge();
 
-  // 🔐 Auth guard + toegang regelen
-  onAuthStateChanged(auth, async (u)=>{
-    if(!u){
-      // geen sessie → naar login
-      window.location.href = 'index.html';
-      return;
-    }
-    loginStatus.textContent = `Ingelogd — uid ${u.uid.slice(0,6)}…${currentName ? ' — '+currentName : ''}`;
-
-    // Als naam ontbreekt (bv. direct URL), terug naar login
-    if(!currentName){ window.location.href = 'index.html'; return; }
-
-    try {
-      await ensureWriteAccess(u.uid, currentName);
-    } catch (e) {
-      console.error('ensureWriteAccess', e);
-      alert('Kon schrijfrechten niet regelen voor je verlanglijst. Probeer even opnieuw in te loggen.');
-    }
-  });
-
-  // Uitloggen
-  logoutBtn.addEventListener('click', async ()=>{
-    try {
-      await signOut(auth);
-    } finally {
-      localStorage.removeItem('sinty_currentName');
-      window.location.href = 'index.html';
-    }
-  });
-
-  // Lootje tonen
-  document.getElementById('reveal').addEventListener('click', async ()=>{
+  /* lootje tonen */
+  revealBtn.addEventListener('click', async ()=>{
     if(!currentName) return toast('Je naam ontbreekt — log opnieuw in a.u.b.');
     const {all}=await computeAllLoggedOnce();
     if(!all) return toast('Nog niet iedereen heeft 1× ingelogd.');
+
     const names = PARTICIPANTS.slice().sort((a,b)=>a.localeCompare(b,'nl',{sensitivity:'base'}));
     const seed  = JSON.stringify({ TREKCODE, names });
     const asg   = assignDeterministic(names, 'sinterlootjes:'+seed);
@@ -220,7 +183,7 @@
     myMatchEl.classList.remove('hidden');
   });
 
-  // Verlanglijst: UI helpers
+  /* verlanglijstjes */
   function itemRow(owner,id,data,purchased){
     const div=document.createElement('div'); div.className='item';
     const left=document.createElement('div'); left.className='col';
@@ -228,6 +191,7 @@
     else { const t=document.createElement('div'); t.textContent=data.title||'(zonder titel)'; left.appendChild(t); }
     if(data.note){ const s=document.createElement('div'); s.className='muted'; s.textContent=data.note; left.appendChild(s); }
     const right=document.createElement('div'); right.style.display='flex'; right.style.gap='8px';
+
     if(owner===currentName){
       const del=document.createElement('button'); del.className='btn-alt'; del.textContent='Verwijderen';
       del.onclick=async()=>{ await deleteDoc(doc(db,'events',EVENT_ID,'wishlists',owner,'items',id)); };
@@ -237,7 +201,7 @@
       btn.onclick=async()=>{
         const pRef=doc(db,'events',EVENT_ID,'wishlists',owner,'purchases',id);
         if(purchased) await deleteDoc(pRef);
-        else await setDoc(pRef,{ buyerUid: auth.currentUser.uid, buyerName: currentName||'—', at: serverTimestamp() });
+        else await setDoc(pRef,{ buyerUid: (auth.currentUser||{}).uid, buyerName: currentName||'—', at: serverTimestamp() });
       };
       right.appendChild(btn);
     }
@@ -245,9 +209,8 @@
     return div;
   }
 
-  // Toevoegen-knop met duidelijke fouten
   document.getElementById('addItem').addEventListener('click', async ()=>{
-    try {
+    try{
       if(!currentName) return toast('Je naam ontbreekt — log opnieuw in a.u.b.');
       const title=document.getElementById('itemTitle').value.trim();
       const url=document.getElementById('itemUrl').value.trim();
@@ -261,13 +224,12 @@
       document.getElementById('itemTitle').value='';
       document.getElementById('itemUrl').value='';
       document.getElementById('itemNote').value='';
-    } catch (e) {
-      console.error('addItem error', e);
-      alert('Kon item niet toevoegen: ' + (e.message || e));
+    }catch(e){
+      console.error(e);
+      toast('Kon item niet toevoegen: ' + (e.message || e));
     }
   });
 
-  // Mijn lijst live
   function startMyListListener(){
     if(!currentName) { myItemsEl.innerHTML=''; return; }
     const qItems=query(collection(db,'events',EVENT_ID,'wishlists',currentName,'items'), orderBy('createdAt','asc'));
@@ -278,7 +240,6 @@
     });
   }
 
-  // Alle lijsten
   async function refreshAllLists(){
     allListsEl.innerHTML='';
     const owners = PARTICIPANTS.slice().sort((a,b)=>a.localeCompare(b,'nl',{sensitivity:'base'}));
@@ -295,11 +256,11 @@
       try{
         const pSnap=await getDocs(collection(db,'events',EVENT_ID,'wishlists',owner,'purchases'));
         pSnap.forEach(d=>purchasedIds.add(d.id));
-      }catch(e){ purchasedIds=new Set(); } // eigenaar heeft geen leesrechten
+      }catch(_){ purchasedIds=new Set(); } // eigenaar: geen leesrechten
 
       iSnap.forEach(d=>{
         const isPurchased=purchasedIds.has(d.id);
-        if(owner !== currentName && isPurchased) return; // verberg gekochte items voor anderen
+        if(owner !== currentName && isPurchased) return;
         list.appendChild(itemRow(owner,d.id,d.data(),isPurchased));
       });
 
@@ -310,7 +271,7 @@
   onSnapshot(collection(db,'events',EVENT_ID,'participants'), ()=>{ updateAllBadge(); startMyListListener(); refreshAllLists(); });
   onSnapshot(collection(db,'events',EVENT_ID,'wishlists'), ()=> refreshAllLists());
 
-  // eerste render
+  // init
   startMyListListener(); refreshAllLists();
 </script>
 </body>
