--- a/app.html
+++ b/app.html
@@ -31,7 +31,7 @@
 <body>
 <div class="wrap">
   <div class="card">
-    <h1>🎅 Sinterlootjes</h1>
+    <h1>Sinterlootjes</h1>
     <p class="lead">Budget <strong>€15</strong> · Start <strong>15:00</strong> op <strong>nr. 47</strong> · Hapjes & lekkers zijn geregeld.</p>
     <div class="controls">
       <span class="pill" id="loginStatus">Controleren…</span>
